specs/blueprints/errors/validation/expected_sections_got_empty.eno
# Expecting sections but getting an ambiguous element

-- input
element:
-- input

-- javascript
parse(input).sections('element');
-- javascript

-- php
Enolib\Parser::parse($input)->sections('element');
-- php

-- python
enolib.parse(input).sections('element')
-- python

-- ruby
Enolib.parse(input).sections('element')
-- ruby

## ValidationError

-- text
Only sections with the key 'element' were expected.
-- text

-- snippet
   Line | Content
 >    1 | element:
-- snippet

selection: [0,0] => [0,8]
